crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_empty_modifications.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
expression: modifications.unwrap()
---
{}
