crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_massless_modification.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
expression: modifications.unwrap()
---
{
  "Ac": ModificationDescription(
    name: "O-Acetylation",
    lost: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    gained: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    targets: [
      Target(
        group: "Hydroxyl",
        location: Some("6-Position"),
        residue: None,
      ),
    ],
  ),
}
