crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_residues_types_without_groups.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
expression: residues.unwrap()
---
{
  "G": ResidueDescription(
    name: "Glycine",
    composition: ChemicalComposition(
      chemical_formula: [
        (Element(
          symbol: "C",
          name: "Carbon",
          mass_number: None,
          isotopes: {
            MassNumber(12): Isotope(
              relative_mass: Mass("12.0000000"),
              abundance: Some(Abundance("0.9893")),
            ),
            MassNumber(13): Isotope(
              relative_mass: Mass("13.00335483507"),
              abundance: Some(Abundance("0.0107")),
            ),
            MassNumber(14): Isotope(
              relative_mass: Mass("14.0032419884"),
              abundance: None,
            ),
          },
        ), Count(2)),
        (Element(
          symbol: "H",
          name: "Hydrogen",
          mass_number: None,
          isotopes: {
            MassNumber(1): Isotope(
              relative_mass: Mass("1.00782503223"),
              abundance: Some(Abundance("0.999885")),
            ),
            MassNumber(2): Isotope(
              relative_mass: Mass("2.01410177812"),
              abundance: Some(Abundance("0.000115")),
            ),
            MassNumber(3): Isotope(
              relative_mass: Mass("3.0160492779"),
              abundance: None,
            ),
          },
        ), Count(5)),
        (Element(
          symbol: "N",
          name: "Nitrogen",
          mass_number: None,
          isotopes: {
            MassNumber(14): Isotope(
              relative_mass: Mass("14.00307400443"),
              abundance: Some(Abundance("0.99636")),
            ),
            MassNumber(15): Isotope(
              relative_mass: Mass("15.00010889888"),
              abundance: Some(Abundance("0.00364")),
            ),
          },
        ), Count(1)),
        (Element(
          symbol: "O",
          name: "Oxygen",
          mass_number: None,
          isotopes: {
            MassNumber(16): Isotope(
              relative_mass: Mass("15.99491461957"),
              abundance: Some(Abundance("0.99757")),
            ),
            MassNumber(17): Isotope(
              relative_mass: Mass("16.99913175650"),
              abundance: Some(Abundance("0.00038")),
            ),
            MassNumber(18): Isotope(
              relative_mass: Mass("17.99915961286"),
              abundance: Some(Abundance("0.00205")),
            ),
          },
        ), Count(2)),
      ],
      particle_offset: None,
    ),
    functional_groups: [],
  ),
}
